cmake_minimum_required(VERSION 3.17)
project(TrabalhoPratico)

set(CMAKE_CXX_STANDARD 14)

add_executable(TrabalhoPratico main.cpp Imperio.cpp Imperio.h Mundo.cpp Mundo.h Utils.cpp Utils.h Jogo.cpp Jogo.h ComanFase.cpp ComanFase.h GameSaver.cpp GameSaver.h Territorios/Castelo.h Territorios/Castelo.cpp Territorios/Continente.h Territorios/Continente.cpp Territorios/Duna.h Territorios/Duna.cpp Territorios/Fortaleza.h Territorios/Fortaleza.cpp Territorios/Ilha.h Territorios/Ilha.cpp Territorios/Mina.h Territorios/Mina.cpp Territorios/Montanha.h Territorios/Montanha.cpp Territorios/Pescaria.h Territorios/Pescaria.cpp Territorios/Planicie.h Territorios/Planicie.cpp Territorios/Refugio.h Territorios/Refugio.cpp Territorios/Territorio.h Territorios/Territorio.cpp Territorios/TerritorioInicial.h Territorios/TerritorioInicial.cpp)